WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62690
REGRESSION(78201): Windowless Flash plug-ins are transparent on some sites
https://bugs.webkit.org/show_bug.cgi?id=62690
Summary
REGRESSION(78201): Windowless Flash plug-ins are transparent on some sites
Jon Honeycutt
Reported
2011-06-14 18:49:56 PDT
Windowless Flash instances that use wmode=transparent paint completely transparent on some sites. <
rdar://problem/9512026
>
Attachments
Patch
(15.05 KB, patch)
2011-06-15 01:03 PDT
,
Jon Honeycutt
no flags
Details
Formatted Diff
Diff
Patch v2
(13.68 KB, patch)
2011-06-15 11:02 PDT
,
Jon Honeycutt
no flags
Details
Formatted Diff
Diff
Patch v3
(13.55 KB, patch)
2011-06-15 11:09 PDT
,
Jon Honeycutt
adachan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2011-06-15 01:03:07 PDT
Created
attachment 97248
[details]
Patch Not sure how to test this. <
https://bugs.webkit.org/show_bug.cgi?id=60169
> covers adding a test that could also test this fix.
Darin Adler
Comment 2
2011-06-15 07:38:54 PDT
Comment on
attachment 97248
[details]
Patch The EWS server wasn’t able to process the patch because the DrawingAreaImpl.cpp part didn’t apply cleanly. You should post a new patch so EWS can work on it.
Jon Honeycutt
Comment 3
2011-06-15 11:02:43 PDT
Created
attachment 97326
[details]
Patch v2 Updated patch that should apply cleanly.
WebKit Review Bot
Comment 4
2011-06-15 11:06:07 PDT
Attachment 97326
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/WebProcess/WebPage/win/DrawingAreaImplWin.cpp:53: Local variables should never be PassOwnPtr (see
http://webkit.org/coding/RefPtr.html
). [readability/pass_ptr] [5] Source/WebKit2/WebProcess/WebPage/DrawingAreaImpl.h:35: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 2 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jon Honeycutt
Comment 5
2011-06-15 11:09:52 PDT
Created
attachment 97329
[details]
Patch v3 Fix a merge error.
WebKit Review Bot
Comment 6
2011-06-15 11:12:23 PDT
Attachment 97329
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/WebProcess/WebPage/DrawingAreaImpl.h:35: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jon Honeycutt
Comment 7
2011-06-15 15:35:59 PDT
Landed in <
http://trac.webkit.org/changeset/88978
>.
Adam Roben (:aroben)
Comment 8
2011-06-20 21:33:29 PDT
Comment on
attachment 97329
[details]
Patch v3 View in context:
https://bugs.webkit.org/attachment.cgi?id=97329&action=review
> Source/WebKit2/WebProcess/WebPage/DrawingAreaImpl.h:91 > + PassOwnPtr<WebCore::GraphicsContext> createGraphicsContext(ShareableBitmap*);
The returned GraphicsContext will go bad on Windows if it outlives the passed-in ShareableBitmap, but this is not made clear to the caller.
Adam Roben (:aroben)
Comment 9
2011-06-21 10:13:05 PDT
This fix caused
bug 63075
.
Adam Roben (:aroben)
Comment 10
2011-06-21 10:47:50 PDT
Some sites that showed this bug:
http://www.tiffany.com/Shopping/CategoryBrowse.aspx?mcat=148204&cid=287464&search_params=s+5-p+1-c+287464-r+101323341-x+-n+12-ri+-ni+1-t
+ megaupload.com (login and register buttons)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug